Added libraries