@@ -45,12 +45,13 @@ application {
   mainClass = 'com.libcat.main.Main'
   applicationDefaultJvmArgs = [
       "--enable-native-access=ALL-UNNAMED",
+      "--enable-native-access=javafx.graphics",
       "--module-path", "lib",
       "--add-modules", "javafx.controls,javafx.fxml"
   ]
 }
 
-def books_path = file('.books');
+def books_path = file('.books/books.xlsx');
 println("Giving program argument: "+books_path);
 
 run {
@@ -58,5 +59,7 @@ run {
 }
 
 dependencies {
-    implementation 'org.apache.poi:poi-ooxml:5.3.0'
+  implementation 'org.apache.poi:poi-ooxml:5.3.0'
+  implementation files('libs/JFXContextLib.jar')
+  implementation files('libs/JLib.jar')
 }
